# easy_reflection_cpp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  sweep.yaml  vcpkg.json  version.py  version.yml
.github/workflows/: bump.yml  cmake.yml
benchmarks/: CMakeLists.txt  config.yaml  serialization.cpp
benchmarks/data/: boba_fett.json  boba_fett.yaml  twitter.h  user_profile.h
cmake/: generate_reflection_code.cmake  print_all_variables.cmake  print_variables.cmake  tools.cmake
example/: CMakeLists.txt  config.yaml  main.cpp  print.h
example/data/: bicycle.h  colors.h
generator/: CMakeLists.txt  README.md  attribute.patch  config.h  config.yaml  executable_name.cpp  executable_name.h  file_manager.h  main.cpp  parser_cpp.h  to_snake_case.h
generator/benchmarks/templates/: README.md
generator/benchmarks/templates/Jinja2/: compiler.py  run_plain.py  run_precompiled.py
generator/benchmarks/templates/Jinja2/templates/: enum.jinja2
generator/benchmarks/templates/cpp_inja/: .gitmodules  CMakeLists.txt  enum.inja  main.cpp
generator/parser/: action.h  ast_callback.h  context.h  parser_cpp.cpp  parser_cpp.h
generator/parser/callbacks/: ast_callback.h  macro_callback.h
generator/self_generated/: reflection.cpp  reflection.h
generator/self_generated/reflected_types/: Config.er.cpp  Config.er.h  Templates.er.cpp  Templates.er.h  config.er.cpp  config_templates.er.cpp  config_templates.er.h
generator/templates/: enum.inja  header.inja  object.inja
generator/tools/: files.cpp  files.h  to_filename.h
readme/: how_to_use.md  installation.md
tests/: CMakeLists.txt  config.yaml  library.cpp  serialization.cpp  tools.h  tresholds.cpp  various.cpp
tests/data/: big.h  big_one.h  complex_map.h  pointers.h  simple.h  tresholds.h  various.h  various_anchors.yaml
tests/data/yaml/: various_anchors.yaml
tests/random/: random.cpp  random.h
